2004-08-24  Tom Copeland <tom@infoether.com>
	* www/docman/index.php, www/include/features_boxes.php - Silenced 
	several PHP 'notice'-level warnings.

2004-08-20  Francisco Gimeno <kikov@kikov.org>
	* www/register/projectinfo.php: Solved a bug on [#856] that prevents
	new projects to be created with conditions:
	- sys_use_scm enabled
	- No SCM Plugin installed.
	Fixed a problem when sys_use_scm disabled.

2004-08-12  Francisco Gimeno <kikov@kikov.org>
	* cronjobs/tracker_gateway.php: it's just a migration from forum to
	tracker. It works in the same way. Need to be integrated into
	cronjobs/mail/mailaliases.php.
	
2004-08-09  Tom Copeland <tom@infoether.com>

	* cronjobs/db_project_sums.php: Fixed bug # 868: Deleted lists are
	no longer included in the project summary aggregate.  This prevents 
	the wrong number from appearing on the project summary page.

2004-08-04  Tim Perdue <tim@gforge.org>

	* DELETE trackers, subprojects in task mgr, forums, FRSPackages, FRSReleases.
	New delete() functions in objects handle all the logic for deleting 
	related data.

2004-08-04  Tim Perdue <tim@gforge.org>

	* Forum email gateway. Forum names are down-cased and 
	reformatted by db/migrateforum.php. cronjobs/mail/mailaliases.php 
	now creates an alias for each forum so it can receive simple messages.
	Messages are piped to cronjobs/forum_gateway.php

2004-08-04  Tim Perdue <tim@gforge.org>

	* MASSIVE RBAC COMMIT - all permission functions are 
	consolidated under RBAC interface.
	* Ability to Add / Edit / Update New Roles.
	* Default roles for each project are Admin, Sr Dev, Jr Dev, 
	Tech Support, Doc Writer
	* Must install the 20040804.sql file and then run db/migraterbac.php
	then manually go into each project and set the user's roles.
	* Each forum has its own membership and permission list now. 
	A project member can be restricted from entering a private forum, so 
	each forum can be private and have a controlled access list, or public 
	so anyone can access it.