@@ -433,9 +433,11 @@ function util_line_wrap ($text, $wrap = 80, $break = "\n") {
  *
  */
 function util_make_links ($data='') {
-	if(empty($data)) { return $data; }
-
+	if(empty($data)) { 
+		return $data; 
+	}
 	$lines = split("\n",$data);
+	$newText = "";
 	while ( list ($key,$line) = each ($lines)) {
 		// When we come here, we usually have form input
 		// encoded in entities. Our aim is to NOT include
